RESOLVED FIXED232674
REGRESSION: AR Quicklook asset is shared instead of page URL
https://bugs.webkit.org/show_bug.cgi?id=232674
Summary REGRESSION: AR Quicklook asset is shared instead of page URL
Dean Jackson
Reported 2021-11-03 11:28:29 PDT
AR QuickLook is not sharing the canonical page URL. This implies that ARQuickLookWebKitItem is not being created.
Attachments
Patch (4.12 KB, patch)
2021-11-03 11:31 PDT, Dean Jackson
graouts: review+
ews-feeder: commit-queue-
Patch (4.18 KB, patch)
2021-11-03 13:00 PDT, Dean Jackson
no flags
EWS test (4.58 KB, patch)
2021-11-04 10:23 PDT, Dean Jackson
ews-feeder: commit-queue-
EWS test 2 (4.40 KB, patch)
2021-11-04 11:26 PDT, Dean Jackson
no flags
Dean Jackson
Comment 1 2021-11-03 11:28:45 PDT
Dean Jackson
Comment 2 2021-11-03 11:31:26 PDT
Dean Jackson
Comment 3 2021-11-03 13:00:16 PDT
Dean Jackson
Comment 4 2021-11-03 14:07:36 PDT
WebKit Commit Bot
Comment 5 2021-11-04 02:27:08 PDT
Re-opened since this is blocked by bug 232704
Dean Jackson
Comment 6 2021-11-04 10:23:18 PDT
Created attachment 443317 [details] EWS test
Dean Jackson
Comment 7 2021-11-04 11:26:04 PDT
Created attachment 443324 [details] EWS test 2
Dean Jackson
Comment 8 2021-11-04 16:30:17 PDT
Note You need to log in before you can comment on or make changes to this bug.