REGRESSION: AR Quicklook asset is shared instead of page URL https://bugs.webkit.org/show_bug.cgi?id=232674 rdar://84220997

Reviewed by Antoine Quint.

There was a typo. ENABLE(ARKIT_QUICK_LOOK_PREVIEW_ITEM)
should be HAVE(ARKIT_QUICK_LOOK_PREVIEW_ITEM).

Source/WebCore/PAL:

* pal/spi/ios/SystemPreviewSPI.h:

Source/WebKit:

* UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:


Canonical link: https://commits.webkit.org/243891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285319 268f45cc-cd09-0410-ab3c-d52691b4dbfc